tests/negative/gold/incomplete-string8-test.gold
tests/negative/incomplete-string8-test.toit:6:3: error: Unterminated string
  """""
  ^
Compilation failed
